# transportation-problem

./: LICENSE  main.py  pyproject.toml  requirements.txt  run.bat  solver.py
solver/: dual.py  transport.py  transport_potential.py  transport_potential_headless.py  transport_simplex.py
tests/: test_solver.py  test_solver_more.py  test_transport.py  test_transport_extended.py  test_transport_extra_extended.py
