[project]
name = "transportation-problem"
version = "1.0.0"
description = ""
authors = [
    {name = "gleb",email = "deffender1337@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "pulp (>=3.2.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
